end_to_end_demo/dashboard_ingress_rules/monitoring_dashboards_ingress_rules.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress-rules
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: grafana-dashboard.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
  - host: prometheus-dashboard.com
    http:
      paths:
      - backend:
          serviceName: prometheus-service
          servicePort: 9090
  - host: alerts-dashboard.com
    http: 
      paths:
      - backend:
          serviceName: alertmanager
          servicePort: 9093
